<resources>
    <string name="app_name">OTrail</string>
    <string name="timeline">Game Timeline</string>
    <string name="continue_trail">Continue Trail</string>
    <string name="talk">Talk</string>
    <string name="shop">Shop</string>
    <string name="trade">Trade</string>
    <string name="inventory">Inventory</string>
    <string name="action">Do Actions</string>
    <string name="rations">Rations</string>
    <string name="health">Health</string>
    <string name="speed">Speed</string>
    <string name="lbsOfFood">Food</string>
    <string name="temperature">Temp</string>
    <string name="datetodisplay">Date</string>
    <string name="weather">Weather</string>
    <string name="announcement">Announcements Go Here</string>
    <string name="congrats">Congratulations!!

This is the end of the Oregon trail, its now time to begin your new life in Oregon!</string>
    <string name="berryminigameexplaination">Pick as many Berries —>
As you can before the
time runs out.
Good Luck!

(Hint: Baskets help you to take home many more berries than by hand.)</string>
    <string name="hints1">Welcome to the Oregon Trail!

    On this 2000 mile adventure, you will be playing as the young girl
    Hattie Campbell, traveling the trail to Oregon with your family.

    First, you will choose the names of your family members.
    After that, you'll travel to the General Store to buy supplies for the trail.

    While are shops at each fort, on the trail you will be on your own.
    Prepare well and be ready for whatever the trail might bring!</string>
</resources>