<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/action"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/timeline"
        android:layout_width="622dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/timeline"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Talk"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:text="@string/talk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueAction" />

    <Button
        android:id="@+id/Trade"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:text="@string/trade"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shop" />

    <Button
        android:id="@+id/Shop"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:text="@string/shop"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Talk" />

    <Button
        android:id="@+id/Inventory"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:text="@string/inventory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action" />

    <Button
        android:id="@+id/continueAction"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/continue_trail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="699dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trailinfo"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/datedisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:elevation="5dp"
        android:text="@string/datetodisplay"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/announcementdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:elevation="10dp"
        android:text="@string/announcement"
        app:layout_constraintBottom_toTopOf="@+id/timeline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weatherdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:elevation="5dp"
        android:text="@string/weather"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/temperatureDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:elevation="5dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/speedDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="369dp"
        android:elevation="5dp"
        android:text="@string/speed"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/rationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="468dp"
        android:elevation="5dp"
        android:text="@string/rations"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/healthDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="576dp"
        android:elevation="5dp"
        android:text="@string/health"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/foodremainingdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="650dp"
        android:elevation="5dp"
        android:text="@string/lbsOfFood"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/gameplaybackground"
        android:layout_width="1000dp"
        android:layout_height="500dp"
        android:adjustViewBounds="false"
        android:background="#000000"
        android:cropToPadding="true"
        android:elevation="-10dp"
        android:scaleType="centerInside"
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gameplaybackground_1_plaines" />

</androidx.constraintlayout.widget.ConstraintLayout>